# ULTRA

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
config/inductive/: inference.yaml
config/transductive/: pretrain_3g.yaml
script/: reified_link_neighbor_loader.py  run.py
test/: test_to_reified_graph.py
ultra/: datasets.py  models.py  tasks.py  util.py
